adjust text colours and add a new lightgray colour to ensure contrasts for accessibility

--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@
 
 	--bg-light: #d6e5e8;
 	--bg-white: #ffffff;
-	--text-light: #e7e4e7;
-	--text-gray: #aeaeae;
+	--text-light: #eeeeee;
+	--text-gray: #666666;
+	--text-lightgray: #bbb;
 }
 
 html {
@@ -122,7 +123,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-	color: var(--text-gray);
+	color: var(--text-lightgray);
 	text-decoration: none;
 	flex: 0 1 auto;
 }
@@ -382,7 +383,7 @@ footer#footer p {
 		border: 2px solid var(--bg-primary-lighter);
 		width: 4rem;
 		height: 4rem;
-    margin: 1rem;
+		margin: 1rem;
 	}
 }
 @media screen and (max-width: 470px) {
